--- a/_code/nuforc_scraper.ipynb
+++ b/_code/nuforc_scraper.ipynb
@@ -212,7 +212,16 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "date = datetime.datetime.today().strftime('%m_%d_%YYYY')\n",
     "df.to_csv(f\"../_datasets/national_ufo_reporting_center_data_{date}.csv\", index=False)"
